Fix updating text from undo info.

KoShapes need both be updated with updateAbsolute as well as
notifyChanged, but for mementos, the second wasn't performed.

BUG:515967


(cherry picked from commit 9e5359d55fc0874f61dcbc4d776ad843689da4c2)

Co-authored-by: Wolthera van Hövell tot Westerflier <griffinvalley@gmail.com>